k8s-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: equalexperts

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: equalexperts-helloworld
  name: equalexperts-helloworld
  namespace: equalexperts
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: equalexperts-helloworld
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: equalexperts-helloworld
    spec:
      containers:
      - name: helloworld-container
        image: sohrabkhan/python-helloworld:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: equalexperts-helloworld
  name: equalexperts-helloworld
  namespace: equalexperts
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: equalexperts-helloworld
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: equalexperts-helloworld
  name: equalexperts-helloworld
  namespace: equalexperts
spec:
  rules:
    - host: equal-experts-helloworld.com
      http:
        paths:
          - backend:
              service:
                name: equalexperts-helloworld
                port:
                  number: 80
            path: /
            pathType: Prefix
